--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="Kishore MJ">
 
-      <title>Portfolio Website Template | CODEGRID</title>
+      <title>Kishore MJ | Portfolio </title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
